--- a/text-to-sql-lab/requirements.txt
+++ b/text-to-sql-lab/requirements.txt
@@ -9,6 +9,7 @@ pandas
 psycopg2-binary
 pytest
 
+# phase 5
 # gguf 
 gguf==0.17.1
 # protobuf
@@ -18,6 +19,9 @@ sentencepiece==0.2.1
 # mistral_common
 mistral_common==1.9.0
 
+# phase 6 - observability
+arize-phoenix
+openinference-instrumentation-langchain
 
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.3
@@ -468,5 +472,233 @@ xgrammar==0.1.25
 xlsxwriter==3.2.9
 xxhash==3.6.0
 yarl==1.22.0
+zipp==3.23.0
+zstandard==0.25.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiohttp-retry==2.9.1
+aioitertools==0.13.0
+aiosignal==1.4.0
+aiosqlite==0.22.1
+alembic==1.18.4
+amqp==5.3.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.12.1
+appdirs==1.4.4
+arize-phoenix==13.0.3
+arize-phoenix-client==1.29.0
+arize-phoenix-evals==2.10.0
+arize-phoenix-otel==0.14.0
+async-timeout==4.0.3
+asyncssh==2.22.0
+atpublic==7.0.0
+attrs==25.4.0
+Authlib==1.6.8
+billiard==4.2.4
+cachetools==7.0.1
+celery==5.6.2
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+configobj==5.0.9
+cross-web==0.4.1
+cryptography==46.0.5
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.4
+dataclasses-json==0.6.7
+dictdiffer==0.9.0
+diskcache==5.6.3
+distro==1.9.0
+dnspython==2.8.0
+dpath==2.2.0
+dulwich==1.0.0
+dvc==3.66.1
+dvc-data==3.18.2
+dvc-http==2.32.0
+dvc-objects==5.2.0
+dvc-render==1.0.2
+dvc-studio-client==0.22.0
+dvc-task==0.40.2
+email-validator==2.3.0
+entrypoints==0.4
+exceptiongroup==1.3.1
+fastapi==0.129.0
+filelock==3.23.0
+flatten-dict==0.4.2
+flufl.lock==9.0.0
+frozenlist==1.8.0
+fsspec==2026.2.0
+funcy==2.0
+gitdb==4.0.12
+GitPython==3.1.46
+googleapis-common-protos==1.72.0
+grandalf==0.8
+graphql-core==3.2.7
+greenlet==3.3.1
+grpc-interceptor==0.15.4
+grpcio==1.78.0
+gto==1.9.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface_hub==1.4.1
+hydra-core==1.3.2
+idna==3.11
+importlib_metadata==8.7.1
+iniconfig==2.3.0
+iterative-telemetry==0.0.10
+Jinja2==3.1.6
+jmespath==1.1.0
+joblib==1.5.3
+jsonpatch==1.33
+jsonpath-ng==1.7.0
+jsonpointer==3.0.0
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+kombu==5.6.2
+langchain==1.2.9
+langchain-classic==1.0.1
+langchain-community==0.4.1
+langchain-core==1.2.9
+langchain-ollama==1.0.1
+langchain-text-splitters==1.1.0
+langgraph==1.0.8
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.7
+langgraph-sdk==0.3.4
+langsmith==0.6.9
+ldap3==2.9.1
+lia-web==0.3.1
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==3.26.2
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.7.1
+mypy_extensions==1.1.0
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
+ollama==0.6.1
+omegaconf==2.3.0
+openinference-instrumentation==0.1.44
+openinference-instrumentation-langchain==0.1.59
+openinference-instrumentation-openai==0.1.41
+openinference-semantic-conventions==0.1.26
+opentelemetry-api==1.39.1
+opentelemetry-exporter-otlp==1.39.1
+opentelemetry-exporter-otlp-proto-common==1.39.1
+opentelemetry-exporter-otlp-proto-grpc==1.39.1
+opentelemetry-exporter-otlp-proto-http==1.39.1
+opentelemetry-instrumentation==0.60b1
+opentelemetry-proto==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
+orjson==3.11.7
+ormsgpack==1.12.2
+packaging==26.0
+pandas==2.3.3
+pathspec==0.12.1
+platformdirs==4.8.0
+pluggy==1.6.0
+ply==3.11
+prometheus_client==0.24.1
+prompt_toolkit==3.0.52
+propcache==0.4.1
+protobuf==6.33.5
+psutil==7.2.2
+psycopg2-binary==2.9.11
+pyarrow==23.0.0
+pyasn1==0.6.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+pydot==4.0.1
+pygit2==1.18.2
+Pygments==2.19.2
+pygtrie==2.5.0
+pyparsing==3.3.2
+pystache==0.6.8
+pytest==9.0.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.22
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+regex==2026.1.15
+requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.3.2
+rpds-py==0.30.0
+ruamel.yaml==0.19.1
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+scmrepo==3.6.1
+semver==3.0.4
+shellingham==1.5.4
+shortuuid==1.0.13
+shtab==1.8.0
+six==1.17.0
+smmap==5.0.2
+SQLAlchemy==2.0.46
+sqlean.py==3.50.4.5
+sqltrie==0.11.2
+starlette==0.52.1
+strawberry-graphql==0.287.3
+sympy==1.14.0
+tabulate==0.9.0
+tenacity==9.1.4
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+tomli==2.4.0
+tomlkit==0.14.0
+torch==2.10.0
+tqdm==4.67.3
+transformers==5.1.0
+triton==3.6.0
+typer==0.23.1
+typer-slim==0.23.1
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+urllib3==2.6.3
+uuid_utils==0.14.0
+uvicorn==0.40.0
+vine==5.1.0
+voluptuous==0.16.0
+wcwidth==0.6.0
+wrapt==1.17.3
+xxhash==3.6.0
+yarl==1.22.0
+zc.lockfile==4.0
 zipp==3.23.0
 zstandard==0.25.0
